# rotator

firmware/firmware/: CommandBuffer.cpp  CommandBuffer.h  Motor.cpp  Motor.h  Settings.cpp  Settings.h  firmware.ino
indi-driver/: .gitignore  Makefile.am  configure.ac
indi-driver/debian/: README.Debian  changelog  control  copyright  files
indi-driver/src/: .gitignore  Makefile.am  rotator.cpp  rotator.h
indi-driver/xml/: Makefile.am  indi_pollux_rotator.xml
